Feat: Função para baixar a foto

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,11 @@
                     <p class="text-center mt-3 text-sm italic font-medium">Este é o seu reflexo felino!</p>
                 </div>
 
+                <a href="/download"
+                    class="block w-full bg-[#A67B5B] hover:bg-[#4B3621] text-white font-bold py-2 px-4 rounded-xl transition-colors shadow-md text-center">
+                    📥 Baixar minha foto
+                </a>
+
                 <a href="/reset">
                     <button class="p-4 bg-brown-300inline-block text-[#A67B5B] hover:text-[#4B3621] text-xs mt-2">
                         Tentar outro
